--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "rechart": "^0.0.1",
+    "recharts": "^2.10.1"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
