--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0",
+    "react-router-dom": "^6.20.1",
     "rechart": "^0.0.1",
     "recharts": "^2.10.1"
   },
