--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@mui/material": "^5.14.18",
     "@mui/x-data-grid": "^6.18.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "rechart": "^0.0.1",
-    "recharts": "^2.10.1"
+    "recharts": "^2.10.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
