--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "eslint --no-error-on-unmatched-pattern --ext .js,.jsx,.ts,.tsx . && tsc && vite build"
-    ,
+    "build": "tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -38,13 +37,5 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"},
-
-    "eslintIgnore": [
-      "*.js",
-      "*.jsx",
-      "*.ts",
-      "*.tsx"
-    ]
-
+    "vite": "^4.4.5"}
 }
